<?xml version="1.0"?>
<package format="2">
  <name>ros_basics</name>
  <version>0.0.0</version>
  <description>The ros_basics package</description>

  <maintainer email="eram@todo.todo">eram</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
